--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.043010Z
-last_push_artifact = 0x403e18
+last_push_time = 2023-12-12T19:59:23.062391Z
+last_push_artifact = 0x404078
 last_push_artifact_type = "global variable"
