--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4020ac]
-last_change = 2023-12-12T19:59:23.301564Z
-addr = 0x4020ac
-name = "aPayloadSize"
-size = 0xf
+[0x402070]
+last_change = 2023-12-12T19:59:23.321074Z
+addr = 0x402070
+name = "aPrctlPrSetNoNe"
+size = 0x2d
