--- a/functions/00401c12.toml
+++ b/functions/00401c12.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x401c12
 size = 0xf0
-last_change = 2023-12-12T19:59:22.982040Z
+last_change = 2023-12-12T19:59:23.002733Z
+
+[header]
+last_change = 2023-12-12T19:59:23.002733Z
+name = "main"
+addr = 0x401c12
