--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:23.486137Z
-last_push_artifact = "Elf64_Vernaux"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-12T19:59:23.507028Z
+last_push_artifact = 0x4005f5
+last_push_artifact_type = "global variable"
