--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x400622]
-last_change = 2023-12-12T19:59:23.424669Z
-addr = 0x400622
-name = "aGlibc225"
-size = 0xc
+[0x400344]
+last_change = 2023-12-12T19:59:23.445665Z
+addr = 0x400344
+name = "aGnu"
+size = 0x4
