--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x402138]
-last_change = 2023-12-12T19:59:23.361091Z
-addr = 0x402138
-name = "aDisableAslr"
-size = 0xd
+[0x403ff8]
+last_change = 2023-12-12T19:59:23.382430Z
+addr = 0x403ff8
+name = "__gmon_start___ptr"
+size = 0x8
