--- a/functions/00401d10.toml
+++ b/functions/00401d10.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x401d10
 size = 0x65
-last_change = 2023-12-12T19:59:23.710569Z
+last_change = 2023-12-12T19:59:23.730759Z
+
+[header]
+last_change = 2023-12-12T19:59:23.730759Z
+name = "init"
+addr = 0x401d10
