--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404010]
-last_change = 2023-12-12T19:59:23.200742Z
-addr = 0x404010
-name = ""
-size = 0x8
+[0x400318]
+last_change = 2023-12-12T19:59:23.220053Z
+addr = 0x400318
+name = "aLib64LdLinuxX8"
+size = 0x1c
