--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x4020ac]
-last_change = 2023-12-12T19:59:23.649150Z
-addr = 0x4020ac
-name = "format"
-size = 0xf
+[0x402138]
+last_change = 2023-12-12T19:59:23.668775Z
+addr = 0x402138
+name = "function"
+size = 0xd
