--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:22.961264Z
-last_push_artifact = 0x401d80
+last_push_time = 2023-12-12T19:59:22.982040Z
+last_push_artifact = 0x401c12
 last_push_artifact_type = "function"
