--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404018]
-last_change = 2023-12-12T19:59:23.830452Z
-addr = 0x404018
-name = ""
-size = 0x8
+[0x402122]
+last_change = 2023-12-12T19:59:23.850569Z
+addr = 0x402122
+name = "aWelcomeToS"
+size = 0x14
