--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x403e08]
-last_change = 2023-12-12T19:59:23.750652Z
-addr = 0x403e08
-name = "off_403E08"
-size = 0x8
+[0x401d88]
+last_change = 2023-12-12T19:59:23.770359Z
+addr = 0x401d88
+name = ".term_proc"
+size = 0x1
