--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x400318]
-last_change = 2023-12-12T19:59:23.220053Z
-addr = 0x400318
-name = "aLib64LdLinuxX8"
-size = 0x1c
+[0x402115]
+last_change = 2023-12-12T19:59:23.239842Z
+addr = 0x402115
+name = "aArgc0"
+size = 0x9
