--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:24.398681Z
-last_push_artifact = 0x401000
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:24.420260Z
+last_push_artifact = 0x401aa7
+last_push_artifact_type = "function"
