--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404068]
-last_change = 2023-12-12T19:59:24.358413Z
-addr = 0x404068
-name = ""
-size = 0x8
+[0x402145]
+last_change = 2023-12-12T19:59:24.378271Z
+addr = 0x402145
+name = "aMain"
+size = 0x5
