--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x402010]
-last_change = 2023-12-12T19:59:24.232820Z
-addr = 0x402010
-name = "aCurrentPersona"
-size = 0x1a
+[0x400388]
+last_change = 2023-12-12T19:59:24.253832Z
+addr = 0x400388
+name = "aGnu_1"
+size = 0x4
