--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x40210c]
-last_change = 2023-12-12T19:59:24.212280Z
-addr = 0x40210c
-name = "aGoodbye"
-size = 0x9
+[0x402010]
+last_change = 2023-12-12T19:59:24.232820Z
+addr = 0x402010
+name = "aCurrentPersona"
+size = 0x1a
