--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:24.147493Z
-last_push_artifact = 0x403e08
+last_push_time = 2023-12-12T19:59:24.169250Z
+last_push_artifact = 0x404060
 last_push_artifact_type = "global variable"
