--- a/functions/00401aa7.toml
+++ b/functions/00401aa7.toml
@@ -1,4 +1,12 @@
 [metadata]
 addr = 0x401aa7
 size = 0x16b
-last_change = 2023-12-12T19:59:24.420260Z
+last_change = 2023-12-12T19:59:24.442494Z
+
+[stack_vars.-0xa0]
+last_change = 2023-12-12T19:59:24.442494Z
+offset = -160
+name = "nbytes"
+type = "size_t"
+size = 0x8
+addr = 0x401aa7
