--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:24.253832Z
-last_push_artifact = 0x400388
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-12T19:59:24.274424Z
+last_push_artifact = "Elf64_Vernaux"
+last_push_artifact_type = "struct"
