--- a/global_vars.toml
+++ b/global_vars.toml
@@ -34,8 +34,8 @@ addr = 0x5040
 name = "__errno_location"
 size = 0x1
 
-[0x404070]
-last_change = 2023-12-12T19:59:24.463872Z
-addr = 0x404070
-name = ""
-size = 0x8
+[0x40210c]
+last_change = 2023-12-12T19:59:24.483837Z
+addr = 0x40210c
+name = "s"
+size = 0x9
