--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:59:24.463872Z
-last_push_artifact = 0x404070
+last_push_time = 2023-12-12T19:59:24.483837Z
+last_push_artifact = 0x40210c
 last_push_artifact_type = "global variable"
